--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -249,7 +249,6 @@
  je_br_mediterranean_merchant_republic_reason: "Our Republic stands strong, admired by the world for all we have achieved. However, our advantages are not eternal. It is crucial that we safeguard our edge, as our rivals seek to undermine everything we have built."
  je_br_colonial_merchant_republic: "Colonial Merchant State"
  je_br_colonial_merchant_republic_reason: "Colonial Merchant State"
- 
  je_br_baltic_toll_collection_rights: "Control over Baltic trade"
  je_br_baltic_toll_collection_rights_reason: "Having control over trade in the Baltic we are able to collect a toll on all ships."
  je_br_strait_of_hercules: "Control over the Strait of Hercules"
@@ -260,6 +259,10 @@
  je_br_klysma_canal_toll_reason: "Having control over Klysma Canal we are able to collect a toll on all ships."
  je_br_persian_strait_toll: "Control over Persian straits"
  je_br_persian_strait_toll_reason: "Having control over Persian straits we are able to collect a toll on all ships."
+ je_br_hajj_profits: "Hajj"
+ je_br_hajj_profits_reason: "Having control over Mecca allows us to profit from the pilgrims on Hajj."
+ je_br_tithe_profits: "Alms of St Peter"
+ je_br_tithe_profits_reason: "Peter's Pence (or Denarii Sancti Petri and "Alms of St Peter") are donations or payments made directly to the Holy See of the Catholic Church."
 
 
  
