--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -15,6 +15,13 @@
  romaioi_tagmata_decision: "Tagmata Primacy"
  romaioi_tagmata_decision_desc: "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the army. They are also among the best-paid soldiers in the empire."
 
+ romaioi_damsyria_decision: "Create Exarchate of Syria"
+ romaioi_damsyria_decision_desc: "We should reastablish the Exarchate of Syria by replacing the Arab Damascus State."
+ romaioi_eastarm_decision: "Expand Armenia"
+ romaioi_eastarm_decision_desc: "The lands of "Arevelyan" are rightfully Armenian and should be restored as such."
+ romaioi_eastmespotamia_decision: "Create Exarchate of Mespotamia"
+ romaioi_eastmespotamia_decision_desc: "The Pronia of Mespotamia is well suited to absord the Assyrian state and as such should be made into a full Exarchate."
+
  notbyz_themata_decision: "Themata Primacy"
  notbyz_themata_decision_desc: "Themata are the main regional military divisions of the Basileía Romaíon, established during the 9th century CE. The Basileía Romaíon is divided into many themata, each with its own governor, military commander and garrison. The main purpose of themata is to provide a means of defense against the empire's enemies. Each thema is responsible for the defense of a specific geographic area and has its own army. The soldiers are mainly local men, who are conscripted and trained for military service. The themata system allows the Basileía Romaíon to have a more flexible military structure, which can adapt to the changing threats and challenges it faces."
  notbyz_tagmata_decision: "Tagmata Primacy"
@@ -125,5 +132,14 @@
  #Government Decisions
  abolish_feudalism_decision: "Abolish Feudalism"
  abolish_feudalism_decision_desc: "Formaly abolish the practice of feudalism within the state."
+
+ #AI Only decisions --- These are to boost AI countries
+ br_byz_easy_agy: "AI Start Scripted War"
+ br_byz_easy_agy_desc: "AI Start Scripted War"
+ br_hun_annex_trs: "AI Start Scripted War"
+ br_hun_annex_trs_desc: "AI Start Scripted War"
+ br_hre_annex_franks: "AI Start Scripted War"
+ br_hre_annex_franks_desc: "AI Start Scripted War"
+ 
 
 
