--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -150,6 +150,9 @@
  company_gen_arsenal: "Genoa Arsenal"
  company_fla_trade: "Ostend Company"
  company_net_trade: "Vereenigde Oostindische Compagnie"
+ company_jap_trade: "Nihon bōekigaisha"
+ company_oma_trade: "sharikat euman liltijara"
+ company_florence_bank: "Medici Bank"
 
  #State Regions
 
