--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -112,6 +112,10 @@
  br_arelat_ADJ: "Burgundian"
  br_kappadocia: "Kappadokía"
  br_kappadocia_ADJ: "Kappadokían"
+ br_verona: "Verona"
+ br_verona_ADJ: "Verona"
+ br_aquileia: "Aquileia"
+ br_aquileia_ADJ: "Aquileia"
 
  #New World
  br_klein_venedig: "Klein-Venedig"
