Fixed Japan modifier, added Venice one
-added Clothes, Luxury Clothes, Furniture, Luxury Furniture, and Porcelain goods modifiers
-Changed Japans modifier from Glassworks output to porcelain out
- Added Italian Craftsman balance to Venice

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -86,7 +86,7 @@
  br_modifier_merchant_republic: "Merchant State"
  br_modifier_colonial_merchant_republic: "Merchant Republic"
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
-
+ br_modifier_italy_craftsmanship: "Italian Craftsmanship"
 
  #PLC-RUS
  br_modifier_liberum_veto: "Liberum Veto"
@@ -231,7 +231,15 @@
  br_modifier_klysma_canal_toll: "Klysma Canal Toll"
  br_modifier_persian_strait_toll: "Persian Strait Toll"
 
-
-
-
+ # Goods modifiers
+ goods_output_luxury_clothes_mult:0 "@luxury_clothes! Luxury Clothes output"
+ goods_output_luxury_clothes_mult_desc:0 "A bonus or penalty to the amount of @luxury_clothes! Luxury Clothes produced by buildings"
+ goods_output_clothes_mult:0 "@clothes! Clothes output"
+ goods_output_clothes_mult_desc:0 "A bonus or penalty to the amount of @clothes! Clothes produced by buildings"
+ goods_output_luxury_furniture_mult:0 "@luxury_furniture! Luxury Furniture output"
+ goods_output_luxury_furniture_mult_desc:0 "A bonus or penalty to the amount of @luxury_furniture! Luxury Furniture produced by buildings"
+ goods_output_furniture_mult:0 "@furniture! Furniture output"
+ goods_output_furniture_mult_desc:0 "A bonus or penalty to the amount of @furniture! Furniture produced by buildings"
+ goods_output_porcelain_mult:0 "@porcelain! Porcelain output"
+ goods_output_porcelain_mult_desc:0 "A bonus or penalty to the amount of @porcelain! Porcelain produced by buildings"
  
