--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -366,8 +366,9 @@
  #Power Blocs
  Romaion_Bloc: "Basileía ton Romaíon" #Basileía Romaíon #Koinopolitia
  Imperial_HRE: "Universum Regnum"
- Venetia_Trade_League: "Lega Italica"
+ Venetia_Trade_League: "Lega Venezia"
  Genoa_Trade_League: "Lega Genovese"
+ italian_league: "Lega Italica"
  Amsterdam_Alliance: "Handelsovereenkomst"
  Alexandria_Accords: "Alexandria Symmachia"
  Andalusian_league: "Al-Andalus"
@@ -406,33 +407,33 @@
  br_principle_economic_imperialism_2_desc: "$br_principle_economic_imperialism_desc$"
  br_principle_economic_imperialism_3_desc: "$br_principle_economic_imperialism_desc$"
 
- br_forced_trade:0 "Forced Trade Access"
- br_forced_trade_action_name:0 "[concept_trade_agreement]"
- br_forced_trade_action_propose_name:0 "Propose [concept_trade_agreement]"
- br_forced_trade_action_break_name:0 "End [concept_trade_agreement]"
- br_forced_trade_action_notification_name:0 "[concept_trade_agreement] Formed"
- br_forced_trade_action_notification_desc:0 "We have formed a [concept_trade_agreement] with [INITIATOR_COUNTRY.GetName]."
+ br_forced_trade: "Forced Trade Access"
+ br_forced_trade_action_name: "[concept_trade_agreement]"
+ br_forced_trade_action_propose_name: "Propose [concept_trade_agreement]"
+ br_forced_trade_action_break_name: "End [concept_trade_agreement]"
+ br_forced_trade_action_notification_name: "[concept_trade_agreement] Formed"
+ br_forced_trade_action_notification_desc: "We have formed a [concept_trade_agreement] with [INITIATOR_COUNTRY.GetName]."
  br_forced_trade_desc: "Establishes a [concept_trade_agreement] between two [Concept('concept_country', '$concept_countries$')]."
- br_forced_trade_pact_desc:0 "[SCOPE.GetRootScope.GetDiplomaticPact.GetFirstCountry.GetName] and [SCOPE.GetRootScope.GetDiplomaticPact.GetSecondCountry.GetName] have a [concept_trade_agreement]."
- br_forced_trade_proposal_notification_name:0 "Proposal for [concept_trade_agreement]"
- br_forced_trade_proposal_notification_desc:0 "[INITIATOR_COUNTRY.GetName] wishes to enter into an [concept_trade_agreement] with us."
- br_forced_trade_proposal_notification_effects_desc:0 "$br_forced_trade_desc$"
- br_forced_trade_proposal_accepted_name:0 "[concept_trade_agreement] Accepted"
- br_forced_trade_proposal_accepted_desc:0 "[TARGET_COUNTRY.GetName] accepted our proposal for an [concept_trade_agreement]."
- br_forced_trade_proposal_declined_name:0 "[concept_trade_agreement] Declined"
- br_forced_trade_proposal_declined_desc:0 "[TARGET_COUNTRY.GetName] declined our proposal for an [concept_trade_agreement]."
- br_forced_trade_action_notification_break_name:0 "[concept_trade_agreement] Broken"
- br_forced_trade_action_notification_break_desc:0 "[INITIATOR_COUNTRY.GetName] have broken off their [concept_trade_agreement] with us."
- br_forced_trade_proposal_third_party_accepted_name:0 "[concept_trade_agreement] Signed"
- br_forced_trade_proposal_third_party_accepted_desc:0 "[INITIATOR_COUNTRY.GetName] and [TARGET_COUNTRY.GetName] entered into a [concept_trade_agreement]."
- br_forced_trade_proposal_third_party_declined_name:0 "[concept_trade_agreement] Rejected"
- br_forced_trade_proposal_third_party_declined_desc:0 "[TARGET_COUNTRY.GetName] refused to enter into an [concept_trade_agreement] with [INITIATOR_COUNTRY.GetName]."
- br_forced_trade_action_notification_third_party_break_name:0 "[concept_trade_agreement] Broken"
- br_forced_trade_action_notification_third_party_break_desc:0 "[INITIATOR_COUNTRY.GetName] broke off their [concept_trade_agreement] with [TARGET_COUNTRY.GetName]."
+ br_forced_trade_pact_desc: "[SCOPE.GetRootScope.GetDiplomaticPact.GetFirstCountry.GetName] and [SCOPE.GetRootScope.GetDiplomaticPact.GetSecondCountry.GetName] have a [concept_trade_agreement]."
+ br_forced_trade_proposal_notification_name: "Proposal for [concept_trade_agreement]"
+ br_forced_trade_proposal_notification_desc: "[INITIATOR_COUNTRY.GetName] wishes to enter into an [concept_trade_agreement] with us."
+ br_forced_trade_proposal_notification_effects_desc: "$br_forced_trade_desc$"
+ br_forced_trade_proposal_accepted_name: "[concept_trade_agreement] Accepted"
+ br_forced_trade_proposal_accepted_desc: "[TARGET_COUNTRY.GetName] accepted our proposal for an [concept_trade_agreement]."
+ br_forced_trade_proposal_declined_name: "[concept_trade_agreement] Declined"
+ br_forced_trade_proposal_declined_desc: "[TARGET_COUNTRY.GetName] declined our proposal for an [concept_trade_agreement]."
+ br_forced_trade_action_notification_break_name: "[concept_trade_agreement] Broken"
+ br_forced_trade_action_notification_break_desc: "[INITIATOR_COUNTRY.GetName] have broken off their [concept_trade_agreement] with us."
+ br_forced_trade_proposal_third_party_accepted_name: "[concept_trade_agreement] Signed"
+ br_forced_trade_proposal_third_party_accepted_desc: "[INITIATOR_COUNTRY.GetName] and [TARGET_COUNTRY.GetName] entered into a [concept_trade_agreement]."
+ br_forced_trade_proposal_third_party_declined_name: "[concept_trade_agreement] Rejected"
+ br_forced_trade_proposal_third_party_declined_desc: "[TARGET_COUNTRY.GetName] refused to enter into an [concept_trade_agreement] with [INITIATOR_COUNTRY.GetName]."
+ br_forced_trade_action_notification_third_party_break_name: "[concept_trade_agreement] Broken"
+ br_forced_trade_action_notification_third_party_break_desc: "[INITIATOR_COUNTRY.GetName] broke off their [concept_trade_agreement] with [TARGET_COUNTRY.GetName]."
 
- br_forced_trade_effect_desc_global:0 "Establishes a [concept_trade_agreement]"
- br_forced_trade_effect_desc_first:0 "[COUNTRY.GetNameNoFlag] establishes a [concept_trade_agreement] with [TARGET_COUNTRY.GetName]"
- br_forced_trade_effect_desc_third:0 "[COUNTRY.GetName] establishes a [concept_trade_agreement] with [AddTextIf(ObjectsEqual(GetMetaPlayer.
+ br_forced_trade_effect_desc_global: "Establishes a [concept_trade_agreement]"
+ br_forced_trade_effect_desc_first: "[COUNTRY.GetNameNoFlag] establishes a [concept_trade_agreement] with [TARGET_COUNTRY.GetName]"
+ br_forced_trade_effect_desc_third: "[COUNTRY.GetName] establishes a [concept_trade_agreement] with [AddTextIf(ObjectsEqual(GetMetaPlayer.
 
  
 
