--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -144,6 +144,7 @@
  br_modifier_china_political_turmoil: "Peasant Resistance"
  br_modifier_inward_perfection: "Inward Perfection"
  br_maratha_modifier: "Maratha Confederation"
+ br_modifier_fine_china_modifier: "Fine Porcelain"
  
  #JAP
  br_modifier_edo_class_system: "Edo Social Class System"
@@ -242,4 +243,6 @@
  goods_output_furniture_mult_desc:0 "A bonus or penalty to the amount of @furniture! Furniture produced by buildings"
  goods_output_porcelain_mult:0 "@porcelain! Porcelain output"
  goods_output_porcelain_mult_desc:0 "A bonus or penalty to the amount of @porcelain! Porcelain produced by buildings"
+ goods_output_glass_mult:0 "@glass! Glass output"
+ goods_output_glass_mult_desc:0 "A bonus or penalty to the amount of @glass! Glass produced by buildings"
  
