--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1904,12 +1904,12 @@
  HUB_NAME_STATE_NEW_SOUTH_WALES_mine: "Broken Hill"
  HUB_NAME_STATE_NEW_SOUTH_WALES_farm: "Dubbo"
  HUB_NAME_STATE_NEW_SOUTH_WALES_wood: "Armidale"
- HUB_NAME_STATE_VICTORIA_city: "Melbourne"
- HUB_NAME_STATE_VICTORIA_port: "Port Albert"
- HUB_NAME_STATE_VICTORIA_mine: "Bendigo"
- HUB_NAME_STATE_VICTORIA_farm: "Warrnambool"
- HUB_NAME_STATE_VICTORIA_wood: "Bairnsdale"
- HUB_NAME_STATE_TASMANIA_city: "Hobart"
+ HUB_NAME_STATE_VICTORIA_city: "Molendinum"
+ HUB_NAME_STATE_VICTORIA_port: "Thálassa" #Seashore in greek
+ HUB_NAME_STATE_VICTORIA_mine: "Tzaara" #Translated local tribe of Djaara into greek
+ HUB_NAME_STATE_VICTORIA_farm: "Barnopoumpoul" #tribe of Warrnoobul in greek
+ HUB_NAME_STATE_VICTORIA_wood: "Koilada Kyknou" #Valley of the Swan in greek. The natives used a name that meant 'Black Swan' or something
+ HUB_NAME_STATE_TASMANIA_city: "Almyros nero" #Saltwater
  HUB_NAME_STATE_TASMANIA_port: "Devonport"
  HUB_NAME_STATE_TASMANIA_mine: "Burnie"
  HUB_NAME_STATE_TASMANIA_farm: "Launceston"
