Australis revamp dos
- Added New Holland as dutch Colony
- Added Colonial Heritage for colonial cultures this will be used more in future assimilation script
- Added some more buildings in New Holland
- Changed Australis colonial law to frontier from resettlement and discovered it can now colonialize land not connected to capital previously could not.
-removed colonial fever country modifier and replaced it with a better state modifier "colonial opportunity.
- New Journal for Autralis and rewrote the Vinland/Elysium one all the same right now but can individualize later
- Created a script for colonial nations that works similar to the slave trade one, that auto assimilates European descendent peasants into the colonial culture. I also created one so if a colonial culture pop moves back to Europe they ditch their colonial culture and go back to their mother culture. Added a bunch of safety rails that make it only effective in the colonial cultures primary region etc
- added some debuffs to the Italian buff modifiers.
- added a tiny modifier to mercantilism tech
- Updated the Australia map data made the coastal provinces "prime land" so theres more arable land along the coast and less in the interior
- Updated all the Hub names

--- a/localization/braz_por/br_modifiers_l_braz_por.yml
+++ b/localization/braz_por/br_modifiers_l_braz_por.yml
@@ -12,7 +12,7 @@
  br_modifier_themata_primacy: "Themata Primacy"
  br_modifier_varangian_primacy: "Varangian Primacy"
  br_modifier_colonial_subsidies: "Colonial Subsidies"
- br_modifier_colonial_ferver: "Colonial Ferver"
+ br_modifier_state_colonial_attraction: "Colonial Opportunity"
  br_modifier_religious_chaos: "Religious Chaos"
  br_modifier_jihad_called: "Jihad Called"
  br_modifier_decentralized_khanate: "Decentralized Khanate"
