--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -514,3 +514,6 @@
  request_east_indies_unification.3.d: "Our overlord has refused us unification"
  request_east_indies_unification.3.a: "Failure."
  request_east_indies_unification.3.f: "We have failed to be granted controle over the whole region, we will have to try again later."
+
+ br_slave_event.1: "Event Description"
+ br_settler_event.1: "Event Description"
