--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -217,10 +217,12 @@
  je_control_nile_reason: "Control Nile"
  je_restore_russia: "Restore Russia"
  je_restore_russia_reason: "Autonomous princelings must be fully reincorporated into our realm."
- je_elysium_expand_01: "Expand Westward"
- je_elysium_expand_01_reason: "Expand Westward."
- je_vineland_expand_01: "Expand Westward"
- je_vineland_expand_01_reason: "Expand Westward."
+ je_elysium_expand_01: "Manifest Destiny"
+ je_elysium_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
+ je_vineland_expand_01: "Manifest Destiny"
+ je_vineland_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
+ je_australis_expand_01: "Manifest Destiny"
+ je_australis_expand_01_reason: "To extend our civilization to those less fortunate, we must acknowledge that we are uniquely endowed with virtues and institutions that others may lack. It is our mission to uplift the less fortunate by reshaping them in our own image. This is not just a task but our destiny."
  je_tartaria_steppe_expansion: "Steppe Expansion"
  je_tartaria_steppe_expansion_reason: "Expand Eastward further into the Steppe and Siberia."
  je_japanese_siberia_expansion: "Shiberia Expansion"
