--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1879,52 +1879,52 @@
  HUB_NAME_STATE_EASTERN_NEW_GUINEA_farm: "Lae"
  HUB_NAME_STATE_EASTERN_NEW_GUINEA_wood: "Goroka"
 
- HUB_NAME_STATE_QUEENSLAND_city: "Brisbane"
- HUB_NAME_STATE_QUEENSLAND_port: "Townsville"
- HUB_NAME_STATE_QUEENSLAND_mine: "Charleville"
- HUB_NAME_STATE_QUEENSLAND_farm: "Hughenden"
- HUB_NAME_STATE_QUEENSLAND_wood: "Toowoomba"
- HUB_NAME_STATE_NORTHERN_TERRITORY_city: "Darwin"
- HUB_NAME_STATE_NORTHERN_TERRITORY_port: "Nhulunbuy"
- HUB_NAME_STATE_NORTHERN_TERRITORY_mine: "Warumungu"
- HUB_NAME_STATE_NORTHERN_TERRITORY_farm: "Katherine"
- HUB_NAME_STATE_NORTHERN_TERRITORY_wood: "Jabiru"
- HUB_NAME_STATE_WESTERN_AUSTRALIA_city: "Perth"
- HUB_NAME_STATE_WESTERN_AUSTRALIA_port: "Port Hedland"
- HUB_NAME_STATE_WESTERN_AUSTRALIA_mine: "Newman"
- HUB_NAME_STATE_WESTERN_AUSTRALIA_farm: "Bunbury"
- HUB_NAME_STATE_WESTERN_AUSTRALIA_wood: "Narrogin"
- HUB_NAME_STATE_SOUTH_AUSTRALIA_city: "Adelaide"
- HUB_NAME_STATE_SOUTH_AUSTRALIA_port: "Port Pirie"
- HUB_NAME_STATE_SOUTH_AUSTRALIA_mine: "Coober Pedy"
- HUB_NAME_STATE_SOUTH_AUSTRALIA_farm: "Tarcoola"
- HUB_NAME_STATE_SOUTH_AUSTRALIA_wood: "Mildura"
- HUB_NAME_STATE_NEW_SOUTH_WALES_city: "Canberra"
- HUB_NAME_STATE_NEW_SOUTH_WALES_port: "Sydney"
- HUB_NAME_STATE_NEW_SOUTH_WALES_mine: "Broken Hill"
- HUB_NAME_STATE_NEW_SOUTH_WALES_farm: "Dubbo"
- HUB_NAME_STATE_NEW_SOUTH_WALES_wood: "Armidale"
- HUB_NAME_STATE_VICTORIA_city: "Molendinum"
- HUB_NAME_STATE_VICTORIA_port: "Thálassa" #Seashore in greek
- HUB_NAME_STATE_VICTORIA_mine: "Tzaara" #Translated local tribe of Djaara into greek
- HUB_NAME_STATE_VICTORIA_farm: "Barnopoumpoul" #tribe of Warrnoobul in greek
- HUB_NAME_STATE_VICTORIA_wood: "Koilada Kyknou" #Valley of the Swan in greek. The natives used a name that meant 'Black Swan' or something
- HUB_NAME_STATE_TASMANIA_city: "Almyros nero" #Saltwater
- HUB_NAME_STATE_TASMANIA_port: "Devonport"
- HUB_NAME_STATE_TASMANIA_mine: "Burnie"
- HUB_NAME_STATE_TASMANIA_farm: "Launceston"
- HUB_NAME_STATE_TASMANIA_wood: "Strahan"
+ HUB_NAME_STATE_QUEENSLAND_city: "Hippolytia"
+ HUB_NAME_STATE_QUEENSLAND_port: "Thermodon"
+ HUB_NAME_STATE_QUEENSLAND_mine: "Daphnia"
+ HUB_NAME_STATE_QUEENSLAND_farm: "Amphion"
+ HUB_NAME_STATE_QUEENSLAND_wood: "Argeius"
+ HUB_NAME_STATE_NORTHERN_TERRITORY_city: "Janszstad"
+ HUB_NAME_STATE_NORTHERN_TERRITORY_port: "Tasmanbaai"
+ HUB_NAME_STATE_NORTHERN_TERRITORY_mine: "Kaapstad"
+ HUB_NAME_STATE_NORTHERN_TERRITORY_farm: "Havenstad"
+ HUB_NAME_STATE_NORTHERN_TERRITORY_wood: "Haarlem"
+ HUB_NAME_STATE_WESTERN_AUSTRALIA_city: "Stymphalia"
+ HUB_NAME_STATE_WESTERN_AUSTRALIA_port: "Cerynitia"
+ HUB_NAME_STATE_WESTERN_AUSTRALIA_mine: "Pholoe"
+ HUB_NAME_STATE_WESTERN_AUSTRALIA_farm: "Hippotion"
+ HUB_NAME_STATE_WESTERN_AUSTRALIA_wood: "Malanchae"
+ HUB_NAME_STATE_SOUTH_AUSTRALIA_city: "Augea"
+ HUB_NAME_STATE_SOUTH_AUSTRALIA_port: "Alpheius"
+ HUB_NAME_STATE_SOUTH_AUSTRALIA_mine: "Tretus"
+ HUB_NAME_STATE_SOUTH_AUSTRALIA_farm: "Nemea"
+ HUB_NAME_STATE_SOUTH_AUSTRALIA_wood: "Diomede"
+ HUB_NAME_STATE_NEW_SOUTH_WALES_city: "Olympios"
+ HUB_NAME_STATE_NEW_SOUTH_WALES_port: "Limenikstólos"
+ HUB_NAME_STATE_NEW_SOUTH_WALES_mine: "Eóra"
+ HUB_NAME_STATE_NEW_SOUTH_WALES_farm: "Nepenia"
+ HUB_NAME_STATE_NEW_SOUTH_WALES_wood: "Bountzaloún"
+ HUB_NAME_STATE_VICTORIA_city: "Hyperionia"
+ HUB_NAME_STATE_VICTORIA_port: "Thálassa"
+ HUB_NAME_STATE_VICTORIA_mine: "Tzaara"
+ HUB_NAME_STATE_VICTORIA_farm: "Barnopoumpoul"
+ HUB_NAME_STATE_VICTORIA_wood: "Koilada"
+ HUB_NAME_STATE_TASMANIA_city: "Panara"
+ HUB_NAME_STATE_TASMANIA_port: "Okeanis"
+ HUB_NAME_STATE_TASMANIA_mine: "Hyrakia"
+ HUB_NAME_STATE_TASMANIA_farm: "Dalis"
+ HUB_NAME_STATE_TASMANIA_wood: "Triphylios"
   
- HUB_NAME_STATE_SOUTH_ISLAND_city: "Christchurch"
- HUB_NAME_STATE_SOUTH_ISLAND_port: "Dunedin"
- HUB_NAME_STATE_SOUTH_ISLAND_mine: "Blenheim"
- HUB_NAME_STATE_SOUTH_ISLAND_farm: "Invercargill"
- HUB_NAME_STATE_SOUTH_ISLAND_wood: "Nelson"
- HUB_NAME_STATE_NORTH_ISLAND_city: "Wellington"
- HUB_NAME_STATE_NORTH_ISLAND_port: "Auckland"
- HUB_NAME_STATE_NORTH_ISLAND_mine: "Napier"
- HUB_NAME_STATE_NORTH_ISLAND_farm: "Palmerston"
- HUB_NAME_STATE_NORTH_ISLAND_wood: "Whangārei"
+ HUB_NAME_STATE_SOUTH_ISLAND_city: "Kípopóli"
+ HUB_NAME_STATE_SOUTH_ISLAND_port: "Okeanos"
+ HUB_NAME_STATE_SOUTH_ISLAND_mine: "Lernaea"
+ HUB_NAME_STATE_SOUTH_ISLAND_farm: "Erymanthia"
+ HUB_NAME_STATE_SOUTH_ISLAND_wood: "Mycenia"
+ HUB_NAME_STATE_NORTH_ISLAND_city: "Centauria"
+ HUB_NAME_STATE_NORTH_ISLAND_port: "Dionysia"
+ HUB_NAME_STATE_NORTH_ISLAND_mine: "Lampeia"
+ HUB_NAME_STATE_NORTH_ISLAND_farm: "Eurysthia"
+ HUB_NAME_STATE_NORTH_ISLAND_wood: "Pholusa"
 
  HUB_NAME_STATE_TONGA_city: "Nuku'alofa"
  HUB_NAME_STATE_TONGA_port: "Tafuna"
