New Anglo-Saxon/New Anglander Names
For the Anglo-Saxon and New Anglander cultures;
-Added 86 Male names
-Added 69 Female names
-Added 24 Noble last names
-Added 26 Commoner last names
-Started condensing name lines

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -324,3 +324,198 @@
  O_Riagain: "Ó Riagáin"
  O_Donnabhain: "Ó Donnabháin"
 
+#Anglo-Saxon
+ 
+ #Male First Names
+ Aelfric: "Ælfric"
+ Aelfweard: "Ælfweard"
+ Aelfstan: "Ælfstan"
+ Aesc: "Æsc"
+ Aeschere: "Æschere"
+ Aeoelmaer: "Æðelmær"
+ Aeoelwulf: "Æðelwulf"
+ Alric: "Alric"
+ Alsi: "Alsi"
+ Alwin: "Alwin"
+ Alwy: "Alwy"
+ Ansfrid: "Ansfrid"
+ Arnketil: "Arnketil"
+ Beorn: "Beorn"
+ Beornraed: "Beornræd"
+ Botwulf: "Botwulf"
+ Brictric: "Brictric"
+ Burgheard: "Burgheard"
+ Beorhtric: "Beorhtric"
+ Breca: "Breca"
+ Breoca: "Breoca"
+ Baeldaeg: "Bældæg"
+ Beanstan: "Beanstan"
+ Ceadda: "Ceadda"
+ Cenric: "Cenric"
+ Cerdic: "Cerdic"
+ Cuthberht: "Cuthberht"
+ Cynebald: "Cynebald"
+ Cynemaer: "Cynemær"
+ Cherin: "Cherin"
+ Doda: "Doda"
+ Dunstan: "Dunstan"
+ Eadric: "Eadric"
+ Eadberht: "Eadberht"
+ Eadmund: "Eadmund"
+ Eadgar: "Eadgar"
+ Eadweard: "Eadweard"
+ Eadwine: "Eadwine"
+ Eastmund: "Eastmund"
+ Ecgberht: "Ecgberht"
+ Earendel: "Earendel"
+ Eorpwald: "Eorpwald"
+ Fitela: "Fitela"
+ Frowin: "Frowin"
+ Garweald: "Garweald"
+ Godric: "Godric"
+ Grendel: "Grendel"
+ Hereweald: "Hereweald"
+ Hrothgar: "Hrothgar"
+ Hunbeorht: "Hunbeorht"
+ Hrooulf: "Hroðulf"
+ Hildraed: "Hildræd"
+ Hygelac: "Hygelac"
+ Hondscio: "Hondscio"
+ Hnaef: "Hnæf"
+ Hoc: "Hoc"
+ Ingeld: "Ingeld"
+ Leofric: "Leofric"
+ Leofstan: "Leofstan"
+ Locrin: "Locrin"
+ Osbeorht: "Osbeorht"
+ Osbeorn: "Osbeorn"
+ Osgar: "Osgar"
+ Osweald: "Osweald"
+ Oswine: "Oswine"
+ Osberht: "Osberht"
+ Osfrith: "Osfrith"
+ Osfrid: "Osfrið"
+ Offa: "Offa"
+ Raedwald: "Rædwald"
+ Sigeberht: "Sigeberht"
+ Siward: "Siward"
+ Swiohun: "Swiðhun"
+ Scyld: "Scyld"
+ Seaxneat: "Seaxnēat"
+ Saessyllt: "Saessyllt"
+ Wada: "Wada"
+ Waermund: "Wærmund"
+ Waltheof: "Waltheof"
+ Wilfrid: "Wilfrið"
+ Wulfric: "Wulfric"
+ Waegmund: "Wægmund"
+ 
+ #Female First Names
+ Aebbe: "Æbbe"
+ Aelfflaed: "Ælfflæd"
+ Aelfgifu: "Ælfgifu"
+ Aelfthryth: "Ælfthryth"
+ Aelfeva: "Aelfeva"
+ Aethelhild: "Æthelhild"
+ Aihilla: "Aihilla"
+ Alweis: "Alweis"
+ Alkelda: "Alkelda"
+ Brictgyth: "Brictgyth"
+ Beorhtgifu: "Beorhtgifu"
+ Beorhtwynn: "Beorhtwynn"
+ Bealdhild: "Bealdhild"
+ Cussot: "Cussot"
+ Cyneburga: "Cyneburga"
+ Cyneburg: "Cyneburg"
+ Cyneswip: "Cyneswiþ"
+ Eadgyd: "Eadgyð"
+ Eadflaed: "Eadflæd"
+ Eadgyth: "Eadgyth"
+ Eda: "Eda"
+ Edeva: "Edeva"
+ Eadgifu: "Eadgifu"
+ Ecgwynn: "Ecgwynn"
+ Ealhswith: "Ealhswith"
+ Eadhild: "Eadhild"
+ Eostre: "Eostre"
+ Frig: "Frig"
+ Frideswide: "Frideswide"
+ Friduswip: "Friðuswiþ"
+ Goda: "Goda"
+ Godesa: "Godesa"
+ Godiva: "Godiva"
+ Gwenissa: "Gwenissa"
+ Gytha: "Gytha"
+ Hild: "Hild"
+ Hreoa: "Hrêða"
+ Haelcelde: "Hǣlcelde"
+ Hretha: "Hretha"
+ Millburga: "Millburga"
+ Mildburg: "Mildburg"
+ Mildgyd: "Mildgyð"
+ Mildlbryd: "Mildþryð"
+ Paega: "Pæga"
+ Pooka: "Pooka"
+ Rheda: "Rheda"
+ Saegiefu: "Sægiefu"
+ Sunngifu: "Sunngifu"
+ Susanna: "Susanna"
+ Tiwa: "Tiwa"
+ Venissa: "Venissa"
+ Wassa: "Wassa"
+ Wihtburg: "Wihtburg"
+ Wilburg: "Wilburg"
+ Wilburh: "Wilburh"
+ Wulfeva: "Wulfeva"
+ Wulfflaed: "Wulfflæd"
+ Wulfgifu: "Wulfgifu"
+ Wulfrun: "Wulfrun"
+ Wynnflaed: "Wynnflæd"
+ 
+ #Noble Last Names
+ Algar: "Ælfgar"
+ Ator: "Ator"
+ Barn: "Bærn"
+ Benz: "Benz"
+ Beteslau: "Beteslau"
+ Bernicia: "Bernicia"
+ Colling: "Colling"
+ Deria: "Deria"
+ Estridsen: "Estridsen"
+ Fenman: "Fenman"
+ Grelley: "Grelley"
+ Grim: "Grim"
+ Gyrth: "Gyrth"
+ Godwinson: "Godwinson"
+ Iclingas: "Iclingas"
+ Lag: "Lag"
+ Leofwin: "Leofwin"
+ Morcar: "Morcar"
+ Sterre: "Sterre"
+ Wuffingas: "Wuffingas"
+ Wessex: "Wessex"
+ 
+ #Common Last Names
+ Bellrope: "Bellrope"
+ Bicga: "Bicga"
+ Blaec: "Blæc"
+ Cappe: "Cappe"
+ Catchpoll: "Catchpoll"
+ Dese: "Dese"
+ Gotton: "Gotton"
+ Grutt: "Grutt"
+ Ivry: "Ivry"
+ Krakr: "Krakr"
+ Malet: "Malet"
+ Mapson: "Mapson"
+ Mouse: "Mouse"
+ Pike: "Pike"
+ Scova: "Scova"
+ Snipe: "Snipe"
+ Snook: "Snook"
+ Stickhare: "Stickhare"
+ Trec: "Trec"
+ Varus: "Varus"
+ Whelp: "Whelp"
+ Wintermilk: "Wintermilk"
+ 
