adjustments and fixes
- expanded the immigrant script
- removed the left over historical UK characters.
- removed duplicate Godwinson in localization.
- fixed various  bugs and missing loc.

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -116,6 +116,8 @@
  br_verona_ADJ: "Verona"
  br_aquileia: "Aquileia"
  br_aquileia_ADJ: "Aquileia"
+ br_new_holland: "Nieuw-Holland"
+ br_new_holland_ADJ: "Dutch"
 
  #New World
  br_klein_venedig: "Klein-Venedig"
