--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -161,7 +161,7 @@
  br_modifier_patriarch_alexandria: "Patriarch Alexandria"
  br_modifier_patriarch_jerusalem: "Patriarch Jerusalem"
  br_modifier_patriarch_antioch: "Patriarch Antioch"
- br_modifier_state_colonial_attraction: "Colonial Ferver"
+ br_modifier_state_colonial_attraction: "Colonial Opportunity"
  br_modifier_religious_chaos: "Religious Chaos"
  br_modifier_jihad_called: "Jihad Called"
  modifier_restored_pentarchy: "Restored Pentarchy"
@@ -177,18 +177,18 @@
  modifier_revere_the_emperor_desc: "This Leader's popularity has inspired the people."
  modifier_popular_emperor: "Popular Ruler"
  modifier_popular_emperor_desc: "This Ruler is revered by the people."
- autocephalous_patriarchate_alexandria: "Autocephalous Patriarchate of Alexandria"
- autocephalous_patriarchate_alexandria_desc: "Autocephalous Patriarchate"
- autocephalous_patriarchate_ani: "Autocephalous Patriarchate of Ani"
- autocephalous_patriarchate_ani_desc: "Autocephalous Patriarchate"
- autocephalous_patriarchate_tblisi: "Autocephalous Patriarchate of Tblisi"
- autocephalous_patriarchate_tblisi_desc: "Autocephalous Patriarchate"
- autocephalous_patriarchate_moscow: "Autocephalous Patriarchate of Moscow"
- autocephalous_patriarchate_moscowa_desc: "Autocephalous Patriarchate"
- autocephalous_patriarchate_elysium: "Autocephalous Patriarchate of Elysium"
- autocephalous_patriarchate_elysium_desc: "Autocephalous Patriarchate"
- autocephalous_patriarchate_belgrade: "Autocephalous Patriarchate of Belgrade"
- autocephalous_patriarchate_belgrade_desc: "Autocephalous Patriarchate"
+ autocephalous_patriarchate_alexandria: "Patriarchate of Alexandria"
+ autocephalous_patriarchate_alexandria_desc: "Patriarchate"
+ autocephalous_patriarchate_ani: "Autocephalous Church of Ani"
+ autocephalous_patriarchate_ani_desc: "Autocephalous Church"
+ autocephalous_patriarchate_tblisi: "Autocephalous Church of Tblisi"
+ autocephalous_patriarchate_tblisi_desc: "Autocephalous Church"
+ autocephalous_patriarchate_moscow: "Autocephalous Church of Moscow"
+ autocephalous_patriarchate_moscowa_desc: "Autocephalous Church"
+ autocephalous_patriarchate_elysium: "Autocephalous Church of Elysium"
+ autocephalous_patriarchate_elysium_desc: "Autocephalous Church"
+ autocephalous_patriarchate_belgrade: "Autocephalous Church of Belgrade"
+ autocephalous_patriarchate_belgrade_desc: "Autocephalous Church"
  autocephalous_patriarchate_assyria: "Assyrian Church"
  autocephalous_patriarchate_assyria_desc: "Assyrian Church"
 
