various tweaks/adjustments
- figured out what folder to put the icon in for the forced trade access.
- Gave Genoa and Venice a 48 month truce to give Venice and chance since they are usually already on the back foot against Milan.
- changed some migration laws doesn't affect mass migration.
- moved NET and FLA from HRE diplomacy to a new Lowlands diplomacy file added DEI and br_new_holland.
- boosted New Hollands capital buildings and pops.
- Added few starting mines to North and West Australia so their was an obvious reason for settling the area.
- tweaked some modifiers
- created a new settler event (Japanese portion not working yet.)
- Adjusted devastation to go up and down 1/3rd as fast.
- Added a little starting Devastation to India and China due to their ongoing major wars.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -161,7 +161,7 @@
  br_modifier_patriarch_alexandria: "Patriarch Alexandria"
  br_modifier_patriarch_jerusalem: "Patriarch Jerusalem"
  br_modifier_patriarch_antioch: "Patriarch Antioch"
- br_modifier_state_colonial_attraction: "Colonial Opportunity"
+ br_modifier_state_colonial_attraction: "Land of Opportunity"
  br_modifier_religious_chaos: "Religious Chaos"
  br_modifier_jihad_called: "Jihad Called"
  modifier_restored_pentarchy: "Restored Pentarchy"
