AI Decisions and more New World South adjustments
- Further AI only decisions related to taking Venice and Genoa's Colonies and some to return important capital states to their rightful owners if the countries still exist in exchange for benefits.
- Bit more tweaking the New World South Borders. Added prime_land to the New World south so even though the colonies have less overall provinces they have more arable land and resources.

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -133,13 +133,23 @@
  abolish_feudalism_decision: "Abolish Feudalism"
  abolish_feudalism_decision_desc: "Formaly abolish the practice of feudalism within the state."
 
- #AI Only decisions --- These are to boost AI countries
+ #AI Only decisions --- These are to boost AI countries and only target other AI countries
  br_byz_easy_agy: "AI Start Scripted War"
  br_byz_easy_agy_desc: "AI Start Scripted War"
  br_hun_annex_trs: "AI Start Scripted War"
  br_hun_annex_trs_desc: "AI Start Scripted War"
  br_hre_annex_franks: "AI Start Scripted War"
  br_hre_annex_franks_desc: "AI Start Scripted War"
+ br_eet_annex_suakin: "AI Start Scripted War"
+ br_eet_annex_suakin_desc: "AI Start Scripted War"
+ br_anl_annex_west_africa_01: "AI Start Scripted War"
+ br_anl_annex_west_africa_01_desc: "AI Start Scripted War"
+ br_anl_annex_west_africa_02: "AI Start Scripted War"
+ br_anl_annex_west_africa_02_desc: "AI Start Scripted War"
+ br_louisiane_annex_atlantis: "AI Start Scripted War"
+ br_louisiane_annex_atlantis_desc: "AI Start Scripted War"
+ br_dutch_indies_annex_giamaica: "AI Start Scripted War"
+ br_dutch_indies_annex_giamaica_desc: "AI Start Scripted War"
  
 
 
