Balance, fixes and more including patch notes so far.
- Added some more ai triggers to decisions
- lowered base bureaucracy for trade routes to 12 from vanilla cost of 20
- other tweaks to improve trade profitability
- added more starting political movements to the ere.
- slowed down debt slavery as debt slavery is much more widespread in the mod at start and the colonies with slave trade import so many slaves so fast and it leave less jobs for other immigrants.
- removed the bugged HRE power bloc Identity moved them back to sovereign empire but created and gave them a new principle that does the things the identity did.
- Gave the more trade based power blocs start with Economic Imperialism principle. Gives the leader a manufacturing boost but decreases members.
- Edited Tartaria's western states provinces with russia giving a dozen or so more provinces to a few of the russian countries.
- Updated the Church and state law to be similar to the latest pdx version to allow conversion to lowest acceptance
- Updated a few modifiers
- Updated the patch notes with most of the changes so far in update 123

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -407,6 +407,13 @@
  br_principle_economic_imperialism_2_desc: "$br_principle_economic_imperialism_desc$"
  br_principle_economic_imperialism_3_desc: "$br_principle_economic_imperialism_desc$"
 
+ principle_group_holy_roman_elite: "Imperial Elite"
+ br_principle_holy_roman_elite: "Imperial Elite"
+ br_principle_holy_roman_elite_desc: "Imperial Elite."
+ br_principle_holy_roman_elite_1_desc: "$br_principle_holy_roman_elite_desc$"
+ br_principle_holy_roman_elite_2_desc: "$br_principle_holy_roman_elite_desc$"
+ br_principle_holy_roman_elite_3_desc: "$br_principle_holy_roman_elite_desc$"
+
  br_forced_trade: "Forced Trade Access"
  br_forced_trade_action_name: "[concept_trade_agreement]"
  br_forced_trade_action_propose_name: "Propose [concept_trade_agreement]"
