--- a/localization/english/br_objectives_l_english.yml
+++ b/localization/english/br_objectives_l_english.yml
@@ -16,6 +16,10 @@
  objective_economic_dominance_desc_LOM:0 "#lore $LOM_FLAVOR_TEXT$#!"
  objective_economic_dominance_name_TUS:0 "#v $TUS$#!"
  objective_economic_dominance_desc_TUS:0 "#lore $TUS_FLAVOR_TEXT$#!"
+ objective_economic_dominance_name_DEN:0 "#v $DEN$#!"
+ objective_economic_dominance_desc_DEN:0 "#lore $DEN_FLAVOR_TEXT$#!"
+ objective_economic_dominance_name_br_aegypt:0 "#v $br_aegypt$#!"
+ objective_economic_dominance_desc_br_aegypt:0 "#lore $br_aegypt_FLAVOR_TEXT$#!"
 
  objective_hegemon_name_HRE:0 "#v Holy Roman Empire#!"
  objective_hegemon_desc_HRE:0 "#lore $HRE_FLAVOR_TEXT$#!"
@@ -23,12 +27,20 @@
  objective_hegemon_desc_BYZ:0 "#lore $BYZ_FLAVOR_TEXT$#!"
  objective_hegemon_name_PER:0 "#v $PER$#!"
  objective_hegemon_desc_PER:0 "#lore $PER_FLAVOR_TEXT$#!"
+ objective_hegemon_name_br_tartaria:0 "#v $br_tartaria$#!"
+ objective_hegemon_desc_br_tartaria:0 "#lore $br_tartaria_FLAVOR_TEXT$#!"
+ objective_hegemon_name_ANL:0 "#v $ANL$#!"
+ objective_hegemon_desc_ANL:0 "#lore $ANL_FLAVOR_TEXT$#!"
 
- objective_egalitarian_society_name_br_elysium:0 "#v $br_elysium$#!"
- objective_egalitarian_society_desc_br_elysium:0 "#lore $br_elysium_FLAVOR_TEXT$#!"
+ objective_egalitarian_society_name_br_new_angland:0 "#v $br_new_angland$#!"
+ objective_egalitarian_society_desc_br_new_angland:0 "#lore $br_new_angland_FLAVOR_TEXT$#!"
  objective_egalitarian_society_name_br_tartaria:0 "#v $br_tartaria$#!"
  objective_egalitarian_society_desc_br_tartaria:0 "#lore $br_tartaria_FLAVOR_TEXT$#!"
  #objective_egalitarian_society_name_CHI:0 "#v $CHI$#!"
  #objective_egalitarian_society_desc_CHI:0 "#lore $CHI_FLAVOR_TEXT$#!"
  objective_egalitarian_society_name_MAL:0 "#v $MAL$#!"
  objective_egalitarian_society_desc_MAL:0 "#lore $MAL_FLAVOR_TEXT$#!"
+ objective_egalitarian_society_name_br_australis:0 "#v $br_australis$#!"
+ objective_egalitarian_society_desc_br_australis:0 "#lore $br_australis_FLAVOR_TEXT$#!"
+ objective_egalitarian_society_name_NAH:0 "#v $NAH$#!"
+ objective_egalitarian_society_desc_NAH:0 "#lore $NAH_FLAVOR_TEXT$#!"
