--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -7,26 +7,33 @@
    JOH_FLAVOR_TEXT: "Johore occupies a precarious position as both the British and the Dutch greedily eye their territory. Will Johor manage to retain what little sovereignty it has left?"
    SIA_FLAVOR_TEXT: "Siam has established itself as the dominant regional power in South-East Asia under the Rattanakosin dynasty. But will Siam manage to reform its economy and society for the modern age?"
    DAI_FLAVOR_TEXT: "A newly reunited Vietnam emerges from centuries of division and strife. Will Dai Nam consolidate itself and build a great nation, or is it destined to be divided once more?"
-   BUR_FLAVOR_TEXT: "It took many bloody conflicts to establish the Third Burmese Empire, and it seems that the struggle is far from over as the British Empire makes its ambitions known. Will Burma become yet another British colony, or will it stand strong against the foreign invaders?"
+   BUR_FLAVOR_TEXT: "It took many bloody conflicts to establish the Third Burmese Empire, and it seems that the struggle is far from over as the Mughal Empire makes its ambitions known. Will Burma become yet another Mughal puppet, or will it stand strong against the foreign invaders?"
    CAM_FLAVOR_TEXT: "Cambodia has fallen far since the golden age of the Khmer Empire. Can the Khmer state rise once more, or will this dark age last forever?"
    LUA_FLAVOR_TEXT: "Once the seat of the mighty Kingdom of Lan Xang, Luang Prabang is a shadow of its former self. Split between the regional powers of Dai Nam and Siam, can the Lao people emerge strong and independent?"
-  
+   JAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   TID_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   DEI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PHI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_new_holland_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_australis_FLAVOR_TEXT: "A strange land seen as a punishment by some, and a chance for a new life by others. A vanity project by elites in Aigyptios and the Patriarchate of Alexandria, the colony is exploited for all it's worth without regard for the native populations. Australis has to compete with New Holland for dominance over the land down under, who will succeed? And will their people ever truly be free?"
+   
+   
   # Balkans
    SER_FLAVOR_TEXT: "Serbia has fought hard for its independence, and will surely have to continue its struggle to retain it. Wedged between great powers, will Serbia become the powder keg of Europe?"
    WAL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
    MOL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
    HUN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   BYZ_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BYZ_FLAVOR_TEXT: "Great reform is needed to bring the empire into the 18th century. Rising seperatism, archaic bureaucracy, unruly subjects, and the loss of wealthy lands in Italy and Africa have left the empire weak. Persia, Aigyptios, and the Abbasid Caliphate all seek to influence what lands remain in the middle east. Basileus Augustinos faces insurmountable odds, but when faced with reform or collapse, will the Eagle finally fall? "
 
   # Italy
    PAP_FLAVOR_TEXT: "Though the political power of the Catholic Church has waned over the centuries, the Pope still presides over the Papal States. Does faith still rule the hearts of men?"
    TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Tuscany fare as liberalism and nationalism compete over the hearts and minds of Italians?"
    SIC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   PAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   LUC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   MOD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   VEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   LOM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PAR_FLAVOR_TEXT: "Parma sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
+   LUC_FLAVOR_TEXT: "Lucca sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
+   MOD_FLAVOR_TEXT: "Modena sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
+   VEN_FLAVOR_TEXT: "With an expansive network of trade posts stretching from Atlanteum in the West to Kherson in the East, the trade flows to their shores with ease. The balance of Northern Italy shifts though, with a storm brewing between the big three powers; Genoa, Milan, and Venice. Will the Doge be able to navigate Venice through these turbulent times into a second golden age or plunge it into the swamps the city sits on?"
+   LOM_FLAVOR_TEXT: "As the wealthiest of the Northern Italian states, Milan sits in a strong position wedged between hostile merchant republics and the Frankish kingdoms. A wave of liberalism has resulted in the expansion of voting rights and protection of assemblies. The people yearn for more, but King Aurelio faces a slipperly slope. If he gives too much, his son may rule over nothing more than an empty house."
    br_genoa_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
@@ -42,7 +49,7 @@
    
   # Western Europe
    NET_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   HRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   HRE_FLAVOR_TEXT: "With Emperor Louis-Philippe rising to the throne, the HRE faces a new wave of centralization. It's subjects however have different ideas, seeking to gain more privliages or break free entirely. Externally the Kings of Iberia cry for help in their fight against Al-Andalus and the enemies of Christendom. Will the HRE be able to centralize and claim further glory? Or will the enemies from within prove to be too powerful?"
    FLA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    BRG_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    OCC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -54,7 +61,7 @@
    SCO_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    WLS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    ENG_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   DEN_FLAVOR_TEXT: "By dominating the North Sea, the North Sea Empire attempts to keep its centralizing neighbors away from its valuable tributaries and the profitable North Sea trade."
+   DEN_FLAVOR_TEXT: "The North Sea Empire attempts to keep its centralizing neighbors away from its valuable tributaries in the Americas and the profitable North Sea trade. With unrest rising with their subjects, will the Danes finally lose control of the Great Britain?"
  
   # Eastern Europe
    PLC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -62,11 +69,11 @@
    UBD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    MOL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_blacksea_colonies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_tartaria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_tartaria_FLAVOR_TEXT: "Tartaria is a relic of a bygone era. Despite it's large military the state that runs it is rotten to the core. Slavery, corruption, and incompentcy runs rampanet in the horde brought to it's knees by the expansion East. The Commonwealth and it's subjects look to expand into Ukraine, while our puppet Duke in Muscovy is distancing themselves. Vultures circle over head, but Tartaria is not yet lost... right?"
    br_muscovy_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
     
   # Iberia
-   ANL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   ANL_FLAVOR_TEXT: "With the HRE-backed Iberian states looking to reconquer lost territories and being surrounded by hostile powers in the North and East, the storm clouds gather. Can Al-Andalus leverage it's colonial empire to defend against the Christian powers or will they be destroyed by their own vassals?"
    CAS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    CAT_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    NAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -96,7 +103,7 @@
    HAR_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
    AWS_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
    SAF_FLAVOR_TEXT: "Originally a Dutch trading post."
-   MAL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MAL_FLAVOR_TEXT: "Made rich by the gold mines and salt trade, Mali is the foremost power in Sub-Saharan Africa. This has made them a prime target by colonial powers looking to take it's wealth for their own. Mali is ill prepared to fight with it's inferior armies and internal strife. Can Mali reform and use it's wealth to help and protect it's people? Or will the greed of the few hurt the poor of the many?"
    br_alodia_FLAVOR_TEXT: "GENERIC_FLAVOR_TEXT$"
    br_makuria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
@@ -128,12 +135,12 @@
   
   # Middle-East
    OMA_FLAVOR_TEXT: "Ruling over both Oman and Zanzibar, the Sultanate is establishing an intercontinental empire. Can Oman remain united?"
-   PER_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PER_FLAVOR_TEXT: "At the center of the Silk Road Persia has grown wealthy beyond measure from the goods that follow to Europe and beyond. But all is not well, the trade is threatened by jealous powers like Tartaria and the Mughal Empire. Along with the threat from Arabia, can Persia maintain it's position as a Great Power or be swallowed by the mountains?"
    ARA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_aegypt_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_aegypt_FLAVOR_TEXT: "The breadbasket of Africa, Aigyptios exapnds it's holdings East into Asia in an attempt to gain a leg up in the struggle against the Basileía Romaíon. Will the land of ancient empires stand free, or be forced to kneel to their new Basileus?"
    
   # North America
-   br_elysium_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_elysium_FLAVOR_TEXT: "Since it's independence, Elysium has been a shining beacon of opportunity by the Romaíoi world. With the influx of skilled laborers their borders expand East, causing conflict with other colonies. Can Elysium be economic powerhouse of the Americas or will they be divided and conquered by the Western colonial overlords?"
    br_louisiane_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_chinese_new_world_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_japanese_new_world_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -141,14 +148,14 @@
    br_new_world_company_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # South and Central America
-   br_new_angland_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   TWT_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_new_angland_FLAVOR_TEXT: "Ruled by the Godwinson family, the last true rulers of Britannia after their failed revolt in the 17th century. They grow their strength in the furtile valleys of South America, attracting settlers from the Isles. With the increasing power, their rulers are starting to grow homesick..."
+   TWT_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Tawantinsuyu modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
    br_antarctique_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_dutch_west_indies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_klein_venedig_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_new_granada_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   MAY_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   NAH_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MAY_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Maya modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   NAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Anahuac modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
    br_atlantica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_giamaica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
