Balance and More
- Switched the generic offensive and defensive national modifiers to unique techs but made them less powerful overall. removed the persian modifier from files and kept the other two in the files.
- added/updated some scripted mass migration events
- gave officers and soldiers more base political strength.
- hashed out the now defunct hre powerbloc identity.
- adjusted pops in various areas to balance and fix bugs related to outdated amounts of certain pops since 1.7 ownership changes.
- Genoa added as a releasable also ai decision to release it
- few coat of arms updated.
- moved more unused coat of arms to the unused folder
- renamed Neo Hellenic to Plethonist inspired be rl guy and third odyssey

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -391,8 +391,8 @@
  mobilization_option_horse_transport: "Horse Transport"
  mobilization_option_horse_transport_desc: "Order horses to carry your soldiers to the front."
 
- identity_br_holy_roman_empire: "Holy Roman Empire"
- identity_br_holy_roman_empire_desc: "The Holy Roman Empire."
+ #identity_br_holy_roman_empire: "Holy Roman Empire"
+ #identity_br_holy_roman_empire_desc: "The Holy Roman Empire."
 
  br_principle_group_autonomous_government: "Autonomous Subjects"
  br_principle_group_autonomous_government_desc: "Central government grants more autonomy on economic and defence matters to local governments; reducing administrative burdens."
