--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -100,3 +100,7 @@
  #Special tech
  br_tech_greekfire: "Greekfire" #aka Liquid Fire
  br_tech_greekfire_desc: "Greek fire, a closely-guarded secret of Basileia Romaion, is a devastating incendiary weapon. At sea, Romaion ships launch projectiles of Greek fire onto enemy vessels, igniting even water. Specialized tubes allowed sailors to spray it directly at foes. On land,  handheld flame-throwing devices project it onto enemies."
+ br_tech_defensive_military_bonus: "Defensive Military Bonus"
+ br_tech_defensive_military_bonus_desc: "Defensive Military Bonus."
+ br_tech_aggressive_military_bonus: "Offensive Military Bonus"
+ br_tech_aggressive_military_bonus_desc: "Offensive Military Bonus."
