--- a/localization/english/br_religion_l_english.yml
+++ b/localization/english/br_religion_l_english.yml
@@ -7,7 +7,7 @@
  br_religion_bogomilist: "Bogomilist"
  br_religion_elysian_orthodox: "Elysian Orthodox"
  br_religion_rus_orthodox: "Russian Orthodox"
- br_religion_hellenic: "Neo Hellenic"
+ br_religion_hellenic: "Plethonist"
  br_religion_norse: "Norse"
  br_religion_zoroastrian: "Zoroastrian"
  br_religion_totemism: "Totemism"
